--- a/vue-sample/package.json
+++ b/vue-sample/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "realchart": "latest"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
