--- a/react-sample/package.json
+++ b/react-sample/package.json
@@ -9,8 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "realchart": "latest"
+    "realchart": "^0.9.29",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
