--- a/basic-sample/package.json
+++ b/basic-sample/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "realchart": "^1.1.3"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "npx nodemon app"
   },
